--- a/src/components/Nav/Navbar.css
+++ b/src/components/Nav/Navbar.css
@@ -1,15 +1,17 @@
 .nav {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-  align-items: center;
-
   width: 100%;
   margin-top: 3rem;
   padding: 1rem 0;
   box-shadow: 5px 10px 20px -20px rgba(85, 172, 238, 1);
   border-bottom: 1px solid rgba(238, 238, 238, 1);
+}
 
+.navInnerWrapper {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: center;
+  max-width: 1024px;
   grid-column: full-start / full-end;
   grid-row: 1 / 2;
 }
