--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 }
 
 html {
+  width: 100%;
   box-sizing: border-box;
   font-size: 62.5%;
   font-family: 'Montserrat', sans-serif;
@@ -22,4 +23,8 @@ body {
   box-sizing: inherit;
   display: flex;
   justify-content: center;
+}
+
+#root {
+  width: 100%;
 }
